worked through the RV notebook. need to add comments

--- a/GP_training_example.ipynb
+++ b/GP_training_example.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "So the RVs look reasonable in that there are no obvious outliers. Furthermore, we can see that the star was observed by HARPS over three distinct observing windows.\n",
     "\n",
-    "Next let's plot the BGLS periodogram and highlight the periodic signal from the known transiting planet K2-18b at $\\sim$ 33 days."
+    "Next let's plot the BGLS periodogram (https://arxiv.org/abs/1412.0467) and highlight the periodic signal from the known transiting planet K2-18b at $\\sim$ 33 days."
    ]
   },
   {
